// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display hyphen when the task has no count 1`] = `
<div
  className="table-responsive"
>
  <table
    className="show-quick-actions-on-hover table table-autofit table-heading-nowrap table-hover table-list"
  >
    <thead>
      <tr>
        <th
          className="table-cell-expand table-head-title"
        >
          step-name
        </th>
        <th
          className="table-head-title text-right"
        >
          <a
            className="inline-item text-truncate-inline"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span
              className="inline-item inline-item-before mr-2"
            >
              <span
                className="sticker sticker-sm"
              >
                <span
                  className="inline-item"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-exclamation-circle text-danger"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#exclamation-circle\\" />",
                      }
                    }
                    data-testid="icon"
                    focusable="false"
                    role="presentation"
                  />
                </span>
              </span>
            </span>
            <span
              className="text-truncate title"
              data-title="overdue"
              title="overdue"
            >
              overdue
            </span>
            <span
              className="inline-item inline-item-after"
            >
              <svg
                className="lexicon-icon lexicon-icon-order-arrow-up"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#order-arrow-up\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </a>
        </th>
        <th
          className="table-head-title text-right"
        >
          <a
            className="inline-item text-truncate-inline"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span
              className="inline-item inline-item-before mr-2"
            >
              <span
                className="sticker sticker-sm"
              >
                <span
                  className="inline-item"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-check-circle text-success"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#check-circle\\" />",
                      }
                    }
                    data-testid="icon"
                    focusable="false"
                    role="presentation"
                  />
                </span>
              </span>
            </span>
            <span
              className="text-truncate title"
              data-title="on-time"
              title="on-time"
            >
              on-time
            </span>
            <span
              className="inline-item inline-item-after"
            >
              <svg
                className="lexicon-icon lexicon-icon-order-arrow-up"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#order-arrow-up\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </a>
        </th>
        <th
          className="table-head-title text-right"
        >
          <a
            className="inline-item text-truncate-inline"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span
              className="text-truncate title"
              data-title="total-pending"
              title="total-pending"
            >
              total-pending
            </span>
            <span
              className="inline-item inline-item-after"
            >
              <svg
                className="lexicon-icon lexicon-icon-order-arrow-up"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#order-arrow-up\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </a>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="lfr-title-column table-cell-expand table-cell-minw-200 table-title"
        >
          Single Approver
        </td>
        <td
          className="text-right"
        >
          <a
            className="workload-by-step-link"
            href="/instance/123456/20/1?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F&filters.statuses%5B0%5D=Pending&filters.slaStatuses%5B0%5D=Overdue"
            onClick={[Function]}
          >
            -
          </a>
        </td>
        <td
          className="text-right"
        >
          <a
            className="workload-by-step-link"
            href="/instance/123456/20/1?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F&filters.statuses%5B0%5D=Pending&filters.slaStatuses%5B0%5D=OnTime"
            onClick={[Function]}
          >
            -
          </a>
        </td>
        <td
          className="text-right"
        >
          <a
            className="workload-by-step-link"
            href="/instance/123456/20/1?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F&filters.statuses%5B0%5D=Pending"
            onClick={[Function]}
          >
            -
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should render component 1`] = `
<div
  className="table-responsive"
>
  <table
    className="show-quick-actions-on-hover table table-autofit table-heading-nowrap table-hover table-list"
  >
    <thead>
      <tr>
        <th
          className="table-cell-expand table-head-title"
        >
          step-name
        </th>
        <th
          className="table-head-title text-right"
        >
          <a
            className="inline-item text-truncate-inline"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span
              className="inline-item inline-item-before mr-2"
            >
              <span
                className="sticker sticker-sm"
              >
                <span
                  className="inline-item"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-exclamation-circle text-danger"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#exclamation-circle\\" />",
                      }
                    }
                    data-testid="icon"
                    focusable="false"
                    role="presentation"
                  />
                </span>
              </span>
            </span>
            <span
              className="text-truncate title"
              data-title="overdue"
              title="overdue"
            >
              overdue
            </span>
            <span
              className="inline-item inline-item-after"
            >
              <svg
                className="lexicon-icon lexicon-icon-order-arrow-up"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#order-arrow-up\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </a>
        </th>
        <th
          className="table-head-title text-right"
        >
          <a
            className="inline-item text-truncate-inline"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span
              className="inline-item inline-item-before mr-2"
            >
              <span
                className="sticker sticker-sm"
              >
                <span
                  className="inline-item"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-check-circle text-success"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#check-circle\\" />",
                      }
                    }
                    data-testid="icon"
                    focusable="false"
                    role="presentation"
                  />
                </span>
              </span>
            </span>
            <span
              className="text-truncate title"
              data-title="on-time"
              title="on-time"
            >
              on-time
            </span>
            <span
              className="inline-item inline-item-after"
            >
              <svg
                className="lexicon-icon lexicon-icon-order-arrow-up"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#order-arrow-up\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </a>
        </th>
        <th
          className="table-head-title text-right"
        >
          <a
            className="inline-item text-truncate-inline"
            href="/?backPath=%2F"
            onClick={[Function]}
          >
            <span
              className="text-truncate title"
              data-title="total-pending"
              title="total-pending"
            >
              total-pending
            </span>
            <span
              className="inline-item inline-item-after"
            >
              <svg
                className="lexicon-icon lexicon-icon-order-arrow-up"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#order-arrow-up\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </a>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="lfr-title-column table-cell-expand table-cell-minw-200 table-title"
        >
          Single Approver
        </td>
        <td
          className="text-right"
        >
          <a
            className="workload-by-step-link"
            href="/instance/undefined/20/1?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F&filters.statuses%5B0%5D=Pending&filters.slaStatuses%5B0%5D=Overdue"
            onClick={[Function]}
          >
            0
          </a>
        </td>
        <td
          className="text-right"
        >
          <a
            className="workload-by-step-link"
            href="/instance/undefined/20/1?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F&filters.statuses%5B0%5D=Pending&filters.slaStatuses%5B0%5D=OnTime"
            onClick={[Function]}
          >
            1
          </a>
        </td>
        <td
          className="text-right"
        >
          <a
            className="workload-by-step-link"
            href="/instance/undefined/20/1?backPath=%2Fprocesses%2F1%2F10%2Ftitle%253Aasc%3FbackPath%3D%252F&filters.statuses%5B0%5D=Pending"
            onClick={[Function]}
          >
            1
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
